# fabricgov

./: .env-example  .gitignore  404.html  CHANGELOG.md  LICENSE  README.en.md  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  sitemap.xml  test_inventory.py
activity/: index.html
api/: index.html
authentication/: index.html
collectors/: index.html
contributing/: index.html
diff/: index.html
docs/: activity.md  api.md  authentication.md  collectors.md  contributing.md  diff.md  examples.md  exporters.md  index.md  keyvault.md  limitations.md  report.md
docs/en/: activity.md  api.md  authentication.md  collectors.md  contributing.md  diff.md  examples.md  exporters.md  index.md  keyvault.md  limitations.md  report.md
docs/stylesheets/: extra.css
en/: index.html
en/activity/: index.html
en/api/: index.html
en/authentication/: index.html
en/collectors/: index.html
en/contributing/: index.html
en/diff/: index.html
en/examples/: index.html
en/exporters/: index.html
en/keyvault/: index.html
en/limitations/: index.html
en/report/: index.html
examples/: index.html
exporters/: index.html
fabricgov/: __init__.py  api.py  checkpoint.py  config.py  exceptions.py  progress.py
fabricgov/auth/: __init__.py  base.py  device_flow.py  keyvault.py  service_principal.py
fabricgov/cli/: __init__.py  analyze.py  auth.py  collect.py  diff.py  main.py  report.py  session.py
fabricgov/collectors/: __init__.py  activity_collector.py  base.py  capacity.py  dataflow_access.py  dataset_access.py  domain.py  refresh_history.py  refresh_schedule.py  report_access.py  tag.py  workload.py  workspace_access.py  workspace_inventory.py
fabricgov/diff/: __init__.py  engine.py  snapshot.py
fabricgov/exporters/: __init__.py  file_exporter.py
fabricgov/reporters/: __init__.py  html_reporter.py  insights.py
keyvault/: index.html
limitations/: index.html
output/20260218_205647/: dashboards.csv  dataflows.csv  datamarts.csv  datasets.csv  log.txt  reports.csv  summary.json  warehouses.csv  (+1 more)
report/: index.html
search/: search_index.json
(+23 files in other folders)
