[tool.poetry]
name = "fabricgov"
version = "0.6.2"
description = "Biblioteca Python para extralçao automatizada de dados para governança em Microsoft Fabric"
authors = ["Luciano Borba <luhborbafilho@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/luhborba/fabricgov"
repository = "https://github.com/luhborba/fabricgov"
documentation = "https://github.com/luhborba/fabricgov/tree/main/docs"
keywords = ["microsoft-fabric", "power-bi", "governance", "data-engineering", "assessment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

include = ["CHANGELOG.md", "LICENSE"]

packages = [{include = "fabricgov"}]

[tool.poetry.dependencies]
python = "^3.12"
msal = "^1.28"
httpx = "^0.27"
click = "^8.1"
pydantic = "^2.0"
python-dotenv = "^1.0"
rich = "^14.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-httpx = "^0.30"
pytest-mock = "^3.15.1"

[tool.poetry.scripts]
fabricgov = "fabricgov.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
